--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "react": "^17.0.1",
     "react-animation-components": "3.0.0",
     "react-dom": "^17.0.1",
+    "react-motion": "^0.5.2",
     "react-popper": "1.3.6",
+    "react-pose": "^4.0.10",
     "react-redux": "7.2.0",
     "react-redux-form": "1.16.14",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.0.0",
     "react-transition-group": "4.4.1",
     "reactstrap": "8.5.1",
     "redux": "4.0.5",
